force-app/main/default/objects/Job_Postings__c/Job_Postings__c.object-meta.xml
<CustomObject>
    <description>job postings from the Jooble callout creates records on this object</description>
    <label>Job Postings</label>
    <nameField>
        <label>Job Postings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>