force-app/main/default/objects/Job_Postings__c/fields/Make_Callout__c.field-meta.xml
<CustomField>
    <fullName>Make_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Callout</label>
    <type>Checkbox</type>
</CustomField>