force-app/main/default/objects/Job_Postings__c/fields/Salary_Number__c.field-meta.xml
<CustomField>
    <fullName>Salary_Number__c</fullName>
    <formula>VALUE(Salary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>