force-app/main/default/objects/Job_Postings__c/fields/Save__c.field-meta.xml
<CustomField>
    <fullName>Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that I want to save the job posting and create a job application record.</description>
    <inlineHelpText>Do you want to save this and create a job application record?</inlineHelpText>
    <label>Save</label>
    <type>Checkbox</type>
</CustomField>