force-app/main/default/objects/Job_Postings__c/fields/Snippet__c.field-meta.xml
<CustomField>
    <fullName>Snippet__c</fullName>
    <label>Snippet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>