force-app/main/default/objects/Job_Postings__c/listViews/New_Job_Postings.listView-meta.xml
<ListView>
    <fullName>New_Job_Postings</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Company__c</columns>
    <columns>Salary__c</columns>
    <columns>Link__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Save__c</columns>
    <filterScope>Mine</filterScope>
    <label>New Job Postings</label>
</ListView>